# jamsession

./: .gitignore  CLAUDE.md  Cargo.toml  battery-pack.toml  book.toml
.agents/skills/post-codegen-check/: SKILL.md
.agents/skills/post-codegen-check/references/: review-instructions.md
.github/workflows/: ci.yml  mdbook.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
md/: README.md  SUMMARY.md  configuration.md  quickstart.md
md/design/: README.md  daemon_actor.md  flow-new-session.md  sequence_diagrams.md
specs/001-agent-daemon/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agent-daemon/checklists/: requirements.md
specs/001-agent-daemon/contracts/: acp-client-facing.md  state-file.md
specs/002-github-integration/: spec.md
specs/003-sandboxing/: spec.md
src/: lib.rs
src/academy/: Cargo.toml
src/academy/src/: agent.rs  bridge.rs  daemon.rs  logging.rs  main.rs
src/academy/tests/: daemon_startup.rs  session_lifecycle.rs
src/jamsession/: Cargo.toml
src/jamsession-mdbook/: Cargo.toml
src/jamsession-mdbook/src/: main.rs
src/jamsession-test/: Cargo.toml
src/jamsession-test/src/: lib.rs
src/jamsession-test/tests/: integration.rs
src/jamsession/src/: actor.rs  agent.rs  daemon.rs  error.rs  lib.rs  logging.rs  main.rs  session.rs  state.rs
src/jamsession/tests/: daemon_startup.rs  harness_session.rs  harness_smoke.rs  session_lifecycle.rs
(+2 files in other folders)
